@@ -7,5 +7,5 @@ Name: Sord
 Version: @SORD_VERSION@
 Description: A lightweight C library for storing RDF statements in memory.
 Requires: @PKG_serd_0@
-Libs: -L${libdir} -l@LIB_SORD@
+Libs: -L${libdir} -l@LIB_SORD@ -lserd-0 -lm
 Cflags: -I${includedir}/sord-@SORD_MAJOR_VERSION@
