@@ -17,13 +17,14 @@
 #ifndef ZIX_BTREE_H
 #define ZIX_BTREE_H
 
-#include <stdbool.h>
 #include <stddef.h>
 
 #include "zix/common.h"
 
 #ifdef __cplusplus
 extern "C" {
+#else
+#    include <stdbool.h>
 #endif
 
 /**
